# val/validator.go
@@ -96,3 +96,14 @@ func ValidateUsername(value string) error {
 
 	return nil
 }
+
+func ValidateEmailId(value int64) error {
+	if value <= 0 {
+		return fmt.Errorf("must be a positive integer")
+	}
+	return nil
+}
+
+func ValidateSecretCode(value string) error {
+	return ValidateString(value, "secret_code", 128)
+}
